--- a/08_Objektorientiert/04_Webanwendung/WebClient.html
+++ b/08_Objektorientiert/04_Webanwendung/WebClient.html
@@ -25,6 +25,7 @@
             <input type="number" id="motivation" name="motivation" min="1" max="10" required><br><br>
 
             <button type="submit">Absenden</button>
+            <!-- <button id="delet">Löschen</button> -->
          </form>
 
          <h3>Antwort des Servers: </h3>
